objects/Removed_Contact__c.object
<CustomObject>
    <description>This object is used to store a summary view of the Contacts that have been Archived and subsequently removed from Salesforce.

These records are created via the Archive Remove data load process.</description>
    <fields>
        <fullName>Contact_City__c</fullName>
        <description>Mailing City on the original Contact record at time of remove.</description>
        <label>Contact City</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Country__c</fullName>
        <description>Mailing Country on the original Contact record at time of remove.</description>
        <label>Contact Country</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Department__c</fullName>
        <description>Department on the original Contact record at time of remove.</description>
        <label>Contact Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email_2__c</fullName>
        <description>Standard email address at time the Contact record was removed.</description>
        <label>Contact Email 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <description>First Name on the original Contact record at time of remove.</description>
        <label>Contact First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Name__c</fullName>
        <description>Last Name on the original Contact record at time of remove.</description>
        <label>Contact Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <description>Standard phone at time the Contact record was removed.</description>
        <label>Contact Phone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Sales_Org__c</fullName>
        <description>Sales Org on the original Contact record at time of remove.</description>
        <label>Contact Sales Org</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_State__c</fullName>
        <description>Mailing State on the original Contact record at time of remove.</description>
        <label>Contact State</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Street__c</fullName>
        <description>Mailing Street on the original Contact record at time of remove.</description>
        <label>Contact Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <description>Contact Type assigned to the original Contact record at time of remove.</description>
        <label>Contact Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Removed_from_SFDC_c__c</fullName>
        <description>The date the record was removed from Salesforce.</description>
        <label>Date Removed from SFDC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_GLI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is GLI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <description>Job Function on the original Contact record at time of remove.</description>
        <label>Job Function</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Account_SFDC_Id__c</fullName>
        <description>SFDC Account Id of the Account the contact was related to prior to removal of the Account and Contact.</description>
        <label>Original Account SFDC Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Contact_SFDC_id__c</fullName>
        <description>SFDC Contact Id from the original Contact record at time of remove.</description>
        <label>Original Contact SFDC Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Removed_Account__c</fullName>
        <description>Lookup to the related &apos;Removed Account&apos; record. (i.e. the Contact was removed when the Account to which it was associated was removed)</description>
        <label>Removed Account</label>
        <referenceTo>Removed_Account__c</referenceTo>
        <relationshipLabel>Removed Contacts</relationshipLabel>
        <relationshipName>Removed_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Removed_Duplicate_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Removed Duplicate Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Removed Contacts</relationshipLabel>
        <relationshipName>Removed_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAP_Contact_Number__c</fullName>
        <description>SAP number on the Contact at the time the record was removed.</description>
        <label>SAP Contact Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Email_1__c</fullName>
        <description>SAP Email 1 on the original Contact record at time of remove.</description>
        <label>SAP Email 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Removed Contact</label>
    <nameField>
        <label>Removed Contact  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Removed Contacts</pluralLabel>
    <recordTypes>
        <fullName>Removed_Duplicate_Contact</fullName>
        <active>true</active>
        <label>Removed Duplicate Contact</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>